Temporarily disable DELAYED_COPY_TO_NV12 with the passthrough command decoder.

The DELAYED_COPY_TO_NV12 code paths make use of an optimization in the validating
command decoder that is currently not supported in the passthrough decoder.

TBR=liberato@chromium.org

BUG=800483

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I783e3415f233c24b90b44f5c1c6dfa34b0de16ce
Reviewed-on: https://chromium-review.googlesource.com/870733
Reviewed-by: Geoff Lang <geofflang@chromium.org>
Commit-Queue: Geoff Lang <geofflang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530246}
Former-commit-id: b9d0450e443c6bcdac65139c1ee59ed73b4c1583